# ethical-hacking-apps

./: .gitignore
ai/: pyproject.toml
ai/agents/: .gitignore  database.py  mcp_client.py  mcp_server.py  pyproject.toml  state.py
ai/agents/authentication/: jwt.py
ai/agents/models/: link.py
ai/agents/routes/: auth.py
ai/iris/: iris.py
binary/: Debug.cpp  Dockerfile  README.md  app-bin  build.sh  deb  main.cpp
rest-api/: Dockerfile  bullshit.py  file_operations.py  get_routes.py  main.py  post_routes.py  pyproject.toml  requirements.txt
rest-api/src/: database.py  file_operations.py  main.py  state.py
rest-api/src/authentication/: jwt.py  password.py
rest-api/src/middlewares/: headers.py  logging.py
rest-api/src/routes/: auth.py  get.py  get_routes.py  post.py  post_routes.py
rest-api/uploads/: main.py  passwd  passwd_1761395725  passwd_1761396170
